# DFMC

./: CMakeLists.txt  README.md  config.yaml  directory_parser.cpp  metadata.json  metadata_common.h  parser_with_yaml  parser_with_yaml.cpp  remote_runner.cpp  remote_server.cpp  test.out
central_server/: common_data.h  config.yaml  main.cpp
central_server/api/: endpoints.cpp  endpoints.h
test/: remote_config_1.yaml  remote_config_2.yaml  remote_config_3.yaml
